fix: fix css style for double side btn, they dont jump anymore

--- a/src/components/Cart/CartItems/CartItems.module.scss
+++ b/src/components/Cart/CartItems/CartItems.module.scss
@@ -82,6 +82,11 @@
     gap: 1rem;
 }
 
+.cart-item__counter-qty {
+    width: 20px;
+    text-align: center;
+}
+
 .cart-item__counter-btn {
     width: 1.5rem;
     height: 1.5rem;
