--- a/src/components/Cart/Pagination/Pagination.module.scss
+++ b/src/components/Cart/Pagination/Pagination.module.scss
@@ -8,3 +8,8 @@
     margin: 2rem 0.5rem 1rem 0;
     user-select: none;
 }
+
+.cart__pagination-cur {
+    width: 20px;
+    text-align: center;
+}
